--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Ph.D. in computational biology based at Imperial College London</h1>
+        		<h1>Thomas Leyshon</h1>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
