--- a/index.html
+++ b/index.html
@@ -1,7 +1,176 @@
----
-layout: default
-title: Hank Quinlan, Horrible Cop
----
-<div class="blurb">
-	<h1>Thomas Leyshon</h1>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+<html>
+<head>
+<title>Thomas Leyshon - Curriculum Vitae</title>
+
+<meta name="viewport" content="width=device-width"/>
+<meta name="description" content="The Curriculum Vitae of Thomas Leyshon."/>
+<meta charset="UTF-8">
+
+<link type="text/css" rel="stylesheet" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
+
+<!--[if lt IE 9]>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+</head>
+<body id="top">
+<div id="cv" class="instaFade">
+	<div class="mainDetails">
+		<div id="headshot" class="quickFade">
+			<img src="mugshot.png" alt="TL" />
+		</div>
+
+		<div id="name">
+			<h1 class="quickFade delayTwo">Thomas Leyshon (MPhys)</h1>
+			<h2 class="quickFade delayThree">Computational Biology Ph.D. student</h2>
+		</div>
+
+		<div id="contactDetails" class="quickFade delayFour">
+			<ul>
+				<li>email: <a href="mailto:t.leyshon17@imperial.co.uk" target="_blank">t.leyshon17@imperial.co.uk</a></li>
+				<li>Imperial Profile: <a href="https://www.theosysbio.com/people/tom-leyshon">www.theosysbio.com/people/tom-leyshon</a></li>
+				<li> Github: <a href="https://github.com/tleysh">github.com/tleysh</a></li>
+				<li>mobile: 07383674905</li>
+			</ul>
+		</div>
+		<div class="clear"></div>
+	</div>
+
+	<div id="mainArea" class="quickFade delayFive">
+		<section>
+			<article>
+				<div class="sectionTitle">
+					<h1>Personal Profile</h1>
+				</div>
+
+				<div class="sectionContent">
+					<p>I'm a final year computational biology Ph.D. student with a background in Physics. I have an interested in using statistical and mathematical technqiues to provide solutions to real world issues.</p>
+				</div>
+			</article>
+			<div class="clear"></div>
+		</section>
+
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Education and Qualification</h1>
+			</div>
+			<div class="sectionContent">
+				<article>
+					<h2>Computational Biology Ph.D., Imperial College London</h2>
+					<p class="subDetails">September 2017 - Present</p>
+					<p> My Ph.D. research involves using methods from statistical physics to provide novel insight into our understanding of biological pattern formation under the supervisor of Dr. Schnoerr and Prof. Stumpf.</p>
+
+					<p>	As part of my Ph.D. I was award a position and funding for the <a href="TsinghuaScan.pdf">Imperial-Tsinghua Golbal Fellows Programme</a>. In addition to the programme I completed a 4 week research visit at Tsinghua, contributing to the work of Dr. Jinzhi Lei on "a model for entropy production of stem cells."</p>
+
+
+							I've delivered a presentation of my work at <a href="https://synergy.st-andrews.ac.uk/masamb/">(MASAMB, 2018)</a> and a poster at <a href="https://www.basellife.org/2019.html">([BC]^2, 2019)</a>.
+					</p>
+				</article>
+
+				<article>
+					<h2>MPhys (1st class) Physics (with study abroad), University of Manchester</h2>
+					<p class="subDetails">September 2013 - June 2017</p>
+					<p> I specialised in statistical and computational physics. My two masters projects:   "<a href="Evolutionary_Dynamics_of_Cancer_Initiation.pdf ">Evolutionary Dynamics of cancer initiation</a>" and "<a href="Adsorption_Project_Report.pdf ">Modelling COE-3 antibody adsorption</a>". These projects were under the supervisor of Dr. Galla and Prof. Lu respectively.  </p>
+					<p>My final masters project resulted in a third author publication <a href="https://pubs.acs.org/doi/full/10.1021/acsami.7b13332 ">(link to paper)</a>. </p>
+						<p>In my 3rd year I studied abroad at the University of Massachusetts, Amherst. Here, I took the opportunity to get my first taste of research by joining the Ross lab and working on "the mechanics of
+Microtubules and the effects of Katanin severing" under the supervision of Prof. Ross. In addition, I alos joined the weekly biophysics journal club and undertook two graudate courses. My GPA at UMass was 3.46 (<a href="UMassTransScript.pdf">see transcript</a>). </p>
+						<p><li>(<a href = "MancDegree.pdf">Degree certificate</a>)</li></p>
+				 </ul></p></p>
+				</article>
+
+				<article>
+					<h2>Comtemporary machine and deep learning course, Yandex </h2>
+					<p class="subDetails">January - February 2020</p>
+					<p> 2 week intensive course taught in person by Yandex and Imperial College London lecturers. The course was implemented in python and made use of the libraries (numpy, scipy, matplotlib, pandas, scikit-learn, tensorflow and pytorch). It covered all classical machine learning techniques, in addition to comptemporary tools such as CNNs, LSTMs, GANs and style transfer. </p>
+					<p><li> (<a href="YandexCertificate.pdf">Course certificate</a>)</li>  </li></p>
+
+				</article>
+			</div>
+			<div class="clear"></div>
+		</section>
+
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Key Skills</h1>
+			</div>
+
+			<div class="sectionContent">
+				<ul class="keySkills">
+					<li>Julia language</li>
+					<li>Python language</li>
+					<li>C++ language</li>
+					<li>Machine/deep learning</li>
+					<li>Computational physics</li>
+					<li>Mathematical methods</li>
+					<li>Complex systems modelling </li>
+					<li>Pattern formation</li>
+					<li>Large-scale computing</li>
+						<li>Stochastic systems</li>
+				</ul>
+			</div>
+			<div class="clear"></div>
+		</section>
+
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Employment, teaching and projects</h1>
+			</div>
+
+			<div class="sectionContent">
+				<article>
+					<h2>Computational Physics demonstrator</h2>
+					<p class="subDetails">Imperial College London, 2018-Present</p>
+					<p> I help teach this 3rd and 4th year physics course at Imperial. The course was implemented in python, C++ and Java. We covered a range of modern computational techniques;
+						<ul class="keySkills">
+						<li>Matrix algebra</li> <li>Interpolation</li>
+						<li>Fourier transforms</li>
+						<li>Monte carlo methods</li>
+						<li>Optimisation methods</li>
+						<li>Finite difference methods</li>
+					</ul>
+					I specialied in optimisation and monte carlo methods. Teaching the project "A log-likelihood fit for extracting neutrino oscillation parameters". <a href="CP2018-LectureNotes.pdf">The course material</a>.
+					 </p>
+				</article>
+
+				<article>
+					<h2>Maths of waves and fields demonstrator</h2>
+					<p class="subDetails">Imperial College London, 2018-2020</p>
+							<p> Senior demonstrator for the 2nd year lab experiment. I was responsible for supervising, teaching and marking students. The experiment involved understanding how electric and themodynamic waves propagate and diffusion through various mediums. <a href="Electrical-and-Thermal-Waves.pdf">Experiment laboratory  script.<a/></p>
+				</article>
+
+				<article>
+					<h2>Student research project supervisor</h2>
+					<p class="subDetails">Imperial College London, May-July, 2019</p>
+					<p>I was the sole supervisor for two groups of 1st year Physics students. The project I advertised to supervisor was on "modelling the spatial-temporal evolution of Turing patterns". The assessment of my students invovled a report and presentation, both groups achieved a 1st class for their work. </p>
+				</article>
+
+				<article>
+					<h2>Funded summer research project at the University of Manchester </h2>
+					<p class="subDetails">University of Manchester, 1st June - 29th July,  2016</p>
+					<p>This project involved the investigation of adsorption of various proteins onto a silicon oxide layer. Ellipsometry was used to collect experimental data. In addition to experimental data we also developmend a computational model of protein adsoroption in MATLAB.  <a href="SummerProjectMancReport.pdf">Assessment report</a>. </p>
+				</article>
+
+				<article>
+					<h2>Funded summer research project at Freie Universität Berlin</h2>
+					<p class="subDetails">Freie Universität Berlin, 1st August - 30th September,  2016</p>
+					<p>Investigating the conformational changes of different protonated states of the Langerin protein under the supervision of Dr. Aleksic and Prof. Keller.  RMSF plots, Ramachadran plots, Mutual information and Conformational entropy to distinguish the key residues that control the binding site. The final produces was a report and presentation (<a href="Investigation_into_the_Conformational_Changes_of_CTLR_Langerin_Protonation_States.pdf">Link to report</a>).</p>
+				</article>
+			</div>
+			<div class="clear"></div>
+	</div>
+</div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-3753241-1");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
+</body>
+</html>
