--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Microtubules and the effects of Katanin severing" under the supervision of Prof.
 				<article>
 					<h2>Maths of waves and fields demonstrator</h2>
 					<p class="subDetails">Imperial College London, 2018-2020</p>
-							<p> Main demonstrator for the 2nd year lab experiment. I was responsible for supervising, teaching and marking students. The experiment involved understanding how electric and themodynamic waves propagate and diffusion through various mediums. <a href="Electrical-and-Thermal-Waves.pdf">Experiment laboratory  script.<a/></p>
+							<p> Senior demonstrator for the 2nd year lab experiment. I was responsible for supervising, teaching and marking students. The experiment involved understanding how electric and themodynamic waves propagate and diffusion through various mediums. <a href="Electrical-and-Thermal-Waves.pdf">Experiment laboratory  script.<a/></p>
 				</article>
 
 				<article>
@@ -174,3 +174,4 @@ pageTracker._trackPageview();
 </script>
 </body>
 </html>
+
