--- a/index.html
+++ b/index.html
@@ -139,13 +139,14 @@ Microtubules and the effects of Katanin severing" under the supervision of Prof.
 				<article>
 					<h2>Maths of waves and fields demonstrator</h2>
 					<p class="subDetails">Imperial College London, 2018-2020</p>
-							<p> Senior demonstrator for the 2nd year lab experiment. I was responsible for supervising, teaching and marking students. The experiment involved understanding how electric and themodynamic waves propagate and diffusion through various mediums. <a href="Electrical-and-Thermal-Waves.pdf">Experiment laboratory  script.<a/></p>
+							<p> Main demonstrator for the 2nd year lab experiment. I was responsible for supervising, teaching and marking students. The experiment involved understanding how electric and themodynamic waves propagate and diffusion through various mediums. <a href="Electrical-and-Thermal-Waves.pdf">Experiment laboratory script.</a></p>
 				</article>
 
 				<article>
 					<h2>Student research project supervisor</h2>
 					<p class="subDetails">Imperial College London, May-July, 2019</p>
-					<p>I was the sole supervisor for two groups of 1st year Physics students. The project I advertised to supervisor was on "modelling the spatial-temporal evolution of Turing patterns". The assessment of my students invovled a report and presentation, both groups achieved a 1st class for their work. </p>
+					<p>I was the sole supervisor for two groups of 1st year Physics students. The project I advertised to supervisor was on "modelling the spatial-temporal evolution of Turing patterns". The 
+						of my students invovled a report and presentation, both groups achieved a 1st class for their work. </p>
 				</article>
 
 				<article>
