--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Microtubules and the effects of Katanin severing" under the supervision of Prof.
 				<article>
 					<h2>Computational Physics demonstrator</h2>
 					<p class="subDetails">Imperial College London, 2018-Present</p>
-					<p> I help teach this 3rd and 4th year physics course at Imperial. The course was implemented in python, C++ and Java. We covered a range of modern computational techniques;
+					<p> I help teach this 3rd and 4th year physics module at Imperial. The course was implemented in python, C++ and Java. We covered a range of modern computational techniques;
 						<ul class="keySkills">
 						<li>Matrix algebra</li> <li>Interpolation</li>
 						<li>Fourier transforms</li>
