--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Thomas Leyshon - Curriculum Vitae</title>
 
-<meta name="viewport" content="width=device-width"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="description" content="The Curriculum Vitae of Thomas Leyshon."/>
 <meta charset="UTF-8">
 
