--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<div id="name">
 			<h1 class="quickFade delayTwo">Thomas Leyshon (MPhys)</h1>
-			<h2 class="quickFade delayThree">Computational Biology Ph.D. student</h2>
+			<h2 class="quickFade delayThree">Computational Biology Ph.D student</h2>
 		</div>
 
 		<div id="contactDetails" class="quickFade delayFour">
@@ -45,7 +45,7 @@
 				</div>
 
 				<div class="sectionContent">
-					<p>I'm a final year computational biology Ph.D. student with a background in Physics. I have an interested in using statistical and mathematical technqiues to provide solutions to real world issues.</p>
+					<p>I'm a final year computational biology Ph.D student with a background in physics. I have an interested in using statistical and mathematical technqiues to provide solutions to real world issues.</p>
 				</div>
 			</article>
 			<div class="clear"></div>
@@ -58,11 +58,11 @@
 			</div>
 			<div class="sectionContent">
 				<article>
-					<h2>Computational Biology Ph.D., Imperial College London</h2>
-					<p class="subDetails">September 2017 - Present</p>
-					<p> My Ph.D. research involves using methods from statistical physics to provide novel insight into our understanding of biological pattern formation under the supervisor of Dr. Schnoerr and Prof. Stumpf.</p>
+					<h2>Computational Biology Ph.D, Imperial College London</h2>
+					<p class="subDetails">September 2017 - (~March 2021)</p>
+					<p> My Ph.D research involves using methods from statistical physics to provide novel insight into the understanding of biological pattern formation. My Ph.D is under the supervisor of Prof. Michael Stumpf and Dr. David Schnoerr.</p>
 
-					<p>	As part of my Ph.D. I was award a position and funding for the <a href="TsinghuaScan.pdf">Imperial-Tsinghua Golbal Fellows Programme</a>. In addition to the programme I completed a 4 week research visit at Tsinghua, contributing to the work of Dr. Jinzhi Lei on "a model for entropy production of stem cells."</p>
+					<p>	As part of my Ph.D I was award competitive funding for the <a href="TsinghuaScan.pdf">Imperial-Tsinghua Golbal Fellows Programme</a>. In addition to the programme I completed a 4 week research visit at Tsinghua, contributing to the work of Dr. Jinzhi Lei on "a model for entropy production of stem cells."</p>
 
 
 							I've delivered a presentation of my work at <a href="https://synergy.st-andrews.ac.uk/masamb/">(MASAMB, 2018)</a> and a poster at <a href="https://www.basellife.org/2019.html">([BC]^2, 2019)</a>.
@@ -72,10 +72,10 @@
 				<article>
 					<h2>MPhys (1st class) Physics (with study abroad), University of Manchester</h2>
 					<p class="subDetails">September 2013 - June 2017</p>
-					<p> I specialised in statistical and computational physics. My two masters projects:   "<a href="Evolutionary_Dynamics_of_Cancer_Initiation.pdf ">Evolutionary Dynamics of cancer initiation</a>" and "<a href="Adsorption_Project_Report.pdf ">Modelling COE-3 antibody adsorption</a>". These projects were under the supervisor of Dr. Galla and Prof. Lu respectively.  </p>
-					<p>My final masters project resulted in a third author publication <a href="https://pubs.acs.org/doi/full/10.1021/acsami.7b13332 ">(link to paper)</a>. </p>
+					<p> I specialised in statistical and computational physics. My two masters projects:   "<a href="Evolutionary_Dynamics_of_Cancer_Initiation.pdf ">Evolutionary Dynamics of cancer initiation</a>" and "<a href="Adsorption_Project_Report.pdf ">Modelling COE-3 antibody adsorption</a>". These projects were under the supervisor of Dr. Tobias Galla and Prof. Jian Lu respectively.  </p>
+					<p>My final masters project resulted in a third author <a href="https://pubs.acs.org/doi/full/10.1021/acsami.7b13332 ">publication</a>. </p>
 						<p>In my 3rd year I studied abroad at the University of Massachusetts, Amherst. Here, I took the opportunity to get my first taste of research by joining the Ross lab and working on "the mechanics of
-Microtubules and the effects of Katanin severing" under the supervision of Prof. Ross. In addition, I alos joined the weekly biophysics journal club and undertook two graudate courses. My GPA at UMass was 3.46 (<a href="UMassTransScript.pdf">see transcript</a>). </p>
+Microtubules and the effects of Katanin severing" under the supervision of Prof. Jennifier Ross. In addition, I joined the weekly biophysics journal club and undertook two graduate courses. My GPA at UMass was 3.46 (<a href="UMassTransScript.pdf">see transcript</a>). </p>
 						<p><li>(<a href = "MancDegree.pdf">Degree certificate</a>)</li></p>
 				 </ul></p></p>
 				</article>
@@ -83,7 +83,9 @@ Microtubules and the effects of Katanin severing" under the supervision of Prof.
 				<article>
 					<h2>Comtemporary machine and deep learning course, Yandex </h2>
 					<p class="subDetails">January - February 2020</p>
-					<p> 2 week intensive course taught in person by Yandex and Imperial College London lecturers. The course was implemented in python and made use of the libraries (numpy, scipy, matplotlib, pandas, scikit-learn, tensorflow and pytorch). It covered all classical machine learning techniques, in addition to comptemporary tools such as CNNs, LSTMs, GANs and style transfer. </p>
+					<p> 2 week intensive course taught in person by Yandex and Imperial College London lecturers.
+						 The course was implemented in python and made use of the libraries (numpy, scipy, matplotlib, pandas, scikit-learn, tensorflow and pytorch).
+						 It covered all classical machine learning techniques, in addition to comptemporary tools such as CNNs, LSTMs, GANs and style transfer. </p>
 					<p><li> (<a href="YandexCertificate.pdf">Course certificate</a>)</li>  </li></p>
 
 				</article>
@@ -124,7 +126,7 @@ Microtubules and the effects of Katanin severing" under the supervision of Prof.
 				<article>
 					<h2>Computational Physics demonstrator</h2>
 					<p class="subDetails">Imperial College London, 2018-Present</p>
-					<p> I help teach this 3rd and 4th year physics module at Imperial. The course was implemented in python, C++ and Java. We covered a range of modern computational techniques;
+					<p> I help teach this 3rd and 4th year physics module at Imperial. The course is implemented in python, C++ and Java. We covered a range of modern computational techniques;
 						<ul class="keySkills">
 						<li>Matrix algebra</li> <li>Interpolation</li>
 						<li>Fourier transforms</li>
@@ -139,26 +141,30 @@ Microtubules and the effects of Katanin severing" under the supervision of Prof.
 				<article>
 					<h2>Maths of waves and fields demonstrator</h2>
 					<p class="subDetails">Imperial College London, 2018-2020</p>
-							<p> Main demonstrator for the 2nd year lab experiment. I was responsible for supervising, teaching and marking students. The experiment involved understanding how electric and themodynamic waves propagate and diffusion through various mediums. <a href="Electrical-and-Thermal-Waves.pdf">Experiment laboratory script.</a> </p>
+							<p> I was the main demonstrator for the 2nd year lab experiment. I was responsible for teaching and marking students.
+								 The experiment involved understanding how electric and themodynamic waves propagate and diffusion through various mediums.
+								 The experimental contain can be found <a href="Electrical-and-Thermal-Waves.pdf">here.</a> </p>
 				</article>
 
 				<article>
 					<h2>Student research project supervisor</h2>
 					<p class="subDetails">Imperial College London, May-July, 2019</p>
-					<p>I was the sole supervisor for two groups of 1st year Physics students. The project I advertised to supervisor was on "modelling the spatial-temporal evolution of Turing patterns". The 
-						of my students invovled a report and presentation, both groups achieved a 1st class for their work. </p>
+					<p>I was the sole supervisor for two groups of 1st year Physics students. The project I advertised to supervisor was on "modelling the spatial-temporal evolution of Turing patterns". The
+						of my students involved a report and presentation, both groups achieved a 1st class for their work. </p>
 				</article>
 
 				<article>
 					<h2>Funded summer research project at the University of Manchester </h2>
 					<p class="subDetails">University of Manchester, 1st June - 29th July,  2016</p>
-					<p>This project involved the investigation of adsorption of various proteins onto a silicon oxide layer. Ellipsometry was used to collect experimental data. In addition to experimental data we also developmend a computational model of protein adsoroption in MATLAB.  <a href="SummerProjectMancReport.pdf">Assessment report</a>. </p>
+					<p>This project involved the investigation of adsorption of various proteins onto a silicon oxide layer.
+						Ellipsometry was used to collect experimental data. In addition to experimental data we also developmend a computational model of protein adsoroption in MATLAB.  <a href="SummerProjectMancReport.pdf">Assessment report</a> and <a href="Adsorption_Project_Report.pdf">project report</a>. </p>
 				</article>
 
 				<article>
 					<h2>Funded summer research project at Freie Universität Berlin</h2>
 					<p class="subDetails">Freie Universität Berlin, 1st August - 30th September,  2016</p>
-					<p>Investigating the conformational changes of different protonated states of the Langerin protein under the supervision of Dr. Aleksic and Prof. Keller.  RMSF plots, Ramachadran plots, Mutual information and Conformational entropy to distinguish the key residues that control the binding site. The final produces was a report and presentation (<a href="Investigation_into_the_Conformational_Changes_of_CTLR_Langerin_Protonation_States.pdf">Link to report</a>).</p>
+					<p>Investigating the conformational changes of different protonated states of the Langerin protein under the supervision of Prof. Bettina Keller and Dr. Stevan Aleksic. We implemented RMSF plots, Ramachadran plots, Mutual information and Conformational entropy to distinguish the key residues that control the binding site.
+						The final products of the project was a oral presentation and a written (<a href="Investigation_into_the_Conformational_Changes_of_CTLR_Langerin_Protonation_States.pdf">report</a>).</p>
 				</article>
 			</div>
 			<div class="clear"></div>
@@ -175,4 +181,3 @@ pageTracker._trackPageview();
 </script>
 </body>
 </html>
-
