--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Microtubules and the effects of Katanin severing" under the supervision of Prof.
 				<article>
 					<h2>Computational Physics demonstrator</h2>
 					<p class="subDetails">Imperial College London, 2018-Present</p>
-					<p> I help teach this 3rd and 4th year physics module at Imperial. The course is implemented in python, C++ and Java. We covered a range of modern computational techniques;
+					<p> I help teach this 3rd and 4th year physics module at Imperial. The module is implemented in python, C++ and Java. We cover a range of modern computational techniques;
 						<ul class="keySkills">
 						<li>Matrix algebra</li> <li>Interpolation</li>
 						<li>Fourier transforms</li>
@@ -134,7 +134,7 @@ Microtubules and the effects of Katanin severing" under the supervision of Prof.
 						<li>Optimisation methods</li>
 						<li>Finite difference methods</li>
 					</ul>
-					I specialied in optimisation and monte carlo methods. Teaching the project "A log-likelihood fit for extracting neutrino oscillation parameters". <a href="CP2018-LectureNotes.pdf">The course material</a>.
+					I specialied in optimisation and monte carlo methods. Teaching the project "A log-likelihood fit for extracting neutrino oscillation parameters". <a href="CP2018-LectureNotes.pdf">The module material</a>.
 					 </p>
 				</article>
 
@@ -143,14 +143,7 @@ Microtubules and the effects of Katanin severing" under the supervision of Prof.
 					<p class="subDetails">Imperial College London, 2018-2020</p>
 							<p> I was the main demonstrator for the 2nd year lab experiment. I was responsible for teaching and marking students.
 								 The experiment involved understanding how electric and themodynamic waves propagate and diffusion through various mediums.
-								 The experimental contain can be found <a href="Electrical-and-Thermal-Waves.pdf">here.</a> </p>
-				</article>
-
-				<article>
-					<h2>Student research project supervisor</h2>
-					<p class="subDetails">Imperial College London, May-July, 2019</p>
-					<p>I was the sole supervisor for two groups of 1st year Physics students. The project I advertised to supervisor was on "modelling the spatial-temporal evolution of Turing patterns". The
-						of my students involved a report and presentation, both groups achieved a 1st class for their work. </p>
+								 The experimental contain can be found <a href="Electrical-and-Thermal-Waves.pdf">here</a>. </p>
 				</article>
 
 				<article>
