--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@ Microtubules and the effects of Katanin severing" under the supervision of Prof.
 				</article>
 
 				<article>
-					<h2>Maths of waves and fields demonstrator</h2>
+					<h2>Electrical and Thermal Waves experiment demonstrator</h2>
 					<p class="subDetails">Imperial College London, 2018-2020</p>
 							<p> I was the main demonstrator for the 2nd year lab experiment. I was responsible for teaching and marking students.
-								 The experiment involved understanding how electric and themodynamic waves propagate and diffusion through various mediums.
+								 The experiment involved developing a theoretical and practical understanding of how electric and themodynamic waves propagate and diffusion through various mediums.
 								 The experimental contain can be found <a href="Electrical-and-Thermal-Waves.pdf">here</a>. </p>
 				</article>
 
@@ -150,7 +150,7 @@ Microtubules and the effects of Katanin severing" under the supervision of Prof.
 					<h2>Funded summer research project at the University of Manchester </h2>
 					<p class="subDetails">University of Manchester, 1st June - 29th July,  2016</p>
 					<p>This project involved the investigation of adsorption of various proteins onto a silicon oxide layer.
-						Ellipsometry was used to collect experimental data. In addition to experimental data we also developmend a computational model of protein adsoroption in MATLAB.  <a href="SummerProjectMancReport.pdf">Assessment report</a> and <a href="Adsorption_Project_Report.pdf">project report</a>. </p>
+						Ellipsometry was used to collect experimental data. In addition to experimental data we also developmend a computational model of protein adsoroption in MATLAB.  <a href="SummerProjectMancReport.pdf">Assessment report</a> and <a href="The_Effects_of_pH_and_Ionic_Strength_on_Protein_Adsorption_of_Lysozyme_and_Bovine_Serum_Albumin_to_a_Silicon_Oxide_Interface.pdf">project report</a>. </p>
 				</article>
 
 				<article>
