--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				<li>email: <a href="mailto:t.leyshon17@imperial.co.uk" target="_blank">t.leyshon17@imperial.co.uk</a></li>
 				<li>Imperial Profile: <a href="https://www.theosysbio.com/people/tom-leyshon">www.theosysbio.com/people/tom-leyshon</a></li>
 				<li> Github: <a href="https://github.com/tleysh">github.com/tleysh</a></li>
+				<li> LinkedIn: <a href="https://www.linkedin.com/in/tom-leyshon-44269a139/">github.com/TomLeyshon</a></li>
 				<li>mobile: 07383674905</li>
 			</ul>
 		</div>
