--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Microtubules and the effects of Katanin severing" under the supervision of Prof.
 					<h2>Funded summer research project at Freie Universität Berlin</h2>
 					<p class="subDetails">Freie Universität Berlin, 1st August - 30th September,  2016</p>
 					<p>Investigating the conformational changes of different protonated states of the Langerin protein under the supervision of Prof. Bettina Keller and Dr. Stevan Aleksic. We implemented RMSF plots, Ramachadran plots, Mutual information and Conformational entropy to distinguish the key residues that control the binding site.
-						The final products of the project was a oral presentation and a written (<a href="Investigation_into_the_Conformational_Changes_of_CTLR_Langerin_Protonation_States.pdf">report</a>).</p>
+						The final products of the project was a oral presentation and a written <a href="Investigation_into_the_Conformational_Changes_of_CTLR_Langerin_Protonation_States.pdf">project report</a>.</p>
 				</article>
 			</div>
 			<div class="clear"></div>
