--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <link type="text/css" rel="stylesheet" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
-
+<link rel="icon" href="favicon.svg" sizes="16x16" type="image/svg">
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
